feat: add ngx-ode-core lib
ngx-ode-core is the ODE Angular core library:
- OdeComponent: Root Component offering logging, routing and subscription utils
- Future core features to come

--- a/angular.json
+++ b/angular.json
@@ -72,6 +72,41 @@
           }
         }
       }
+    },
+    "ngx-ode-core": {
+      "projectType": "library",
+      "root": "projects/ngx-ode-core",
+      "sourceRoot": "projects/ngx-ode-core/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-ode-core/tsconfig.lib.json",
+            "project": "projects/ngx-ode-core/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-ode-core/src/test.ts",
+            "tsConfig": "projects/ngx-ode-core/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-ode-core/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-ode-core/tsconfig.lib.json",
+              "projects/ngx-ode-core/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "ngx-ode-sijil"
 }
