--- a/projects/ngx-ode-ui/package.json
+++ b/projects/ngx-ode-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-ode-ui",
-  "version": "3.0.7",
+  "version": "3.0.7-dev.1",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14"
