--- a/projects/ngx-ode-sijil/package.json
+++ b/projects/ngx-ode-sijil/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-ode-sijil",
-  "version": "3.9.0",
+  "version": "3.9.1-dev.0",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14"
